# plating

./: .clog.toml  .conform.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  license_header_template.md  rustfmt.toml  rusty-hook.toml
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/workflows/: audit.yml  checks.yml  conform.yml  daily_audit_check.yml  deploy.yml  rust_checks.yml
.rusty-hooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
WinUI3/: Cargo.toml
WinUI3/src/: lib.rs
assets/: docs.css
book/: book.toml
book/src/: CONTRIBUTORS.md  SUMMARY.md  introduction.md
book/src/api/: api.md
book/src/contributing/: contributing.md  documentation.md  other.md
book/src/installation/: installation.md
book/src/showcases/: calpipe.md  showcases.md
cocoa/: Cargo.toml
cocoa/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/data/: mod.rs
core/src/mock/: button.rs  mock_only.rs  mod.rs  traits.rs  window.rs
core/src/utils/: children.rs  mod.rs  outlet.rs  serde.rs  settings.rs
core/src/widgets/: mod.rs
core2/: Cargo.toml
core2/src/: lib.rs
core2/src/backend/: mod.rs
core2/src/backend/cocoa/: mod.rs  ns_string.rs
core2/src/manager/: mod.rs
core2/src/native/: cocoa.rs  mod.rs  native_child_of.rs  native_widget.rs
core2/src/native/app/: cocoa.rs
core2/src/native/data/: cocoa.rs  mod.rs
core2/src/native/events/: mod.rs  mouse_down.rs
core2/src/native/menu/: cocoa.rs  mod.rs
core2/src/native/window/: cocoa.rs
core2/src/utils/: children.rs  mod.rs  properties.rs  serde.rs
core2/src/utils/data/: mod.rs
core2/src/widget/: mod.rs  template.rs  widget.rs
core2/src/widget/app/: mod.rs  widget.rs
core2/src/widget/menu/: mod.rs  widget.rs
core2/src/widget/properties/: mod.rs
core2/src/widget/system/: cocoa.rs  mod.rs
core2/src/widget/window/: mod.rs  widget.rs
examples/: cocoa_hello_world.rs  native.rs  test.rs
examples/cocoa/: main.rs
plating/: Cargo.toml
plating/examples/hello_world/: main.rs
plating/examples/playground/: children.rs  events.rs  main.rs  settings.rs
plating/src/: lib.rs
src/: error.rs  leftovers.rs  lib.rs
src/actions/: mod.rs
src/actions/lifecycle/: attach.rs  connect.rs  detach.rs  drop.rs  mod.rs
src/backend/: mod.rs
src/data/: mod.rs
src/events/: handler.rs  listener.rs  mod.rs  system.rs
src/widgets/: children.rs  events.rs  mod.rs  outlet.rs  system.rs  traits.rs  widget.rs
src/widgets/cocoa/: button.rs  button_parameters.rs  defs.rs  error.rs  event.rs  menu.rs  menu_item.rs  mod.rs  native.rs  root.rs  utils.rs  window.rs
src/widgets/cocoa/delegates/: mod.rs  window_delegate.rs
src/widgets/generic/: button.rs  menu.rs  menu_item.rs  mod.rs  root.rs  window.rs
src/widgets/gtk/: mod.rs
src/widgets/mock/: error.rs  mod.rs  native.rs
src/widgets/native/: mod.rs  traits.rs
src/widgets/utils/: child.rs  connectable.rs  mod.rs  outlet_holder.rs  parameters.rs  widget_pointer.rs
src/widgets/win/: error.rs  mod.rs  native.rs
systems/: Cargo.toml
systems/default_widgets/: Cargo.toml
systems/default_widgets/src/: lib.rs
systems/src/: lib.rs  types.rs
systems/src/systems/: android.rs  cocoa.rs  gtk.rs  ios.rs  mock.rs  mod.rs  qt.rs  win_ui_3.rs
systems/src/tags/: mod.rs
systems_macros/: Cargo.toml  README.md
systems_macros/src/: build_widget_list.rs  lib.rs  marker_impl.rs  tag.rs  utils.rs
uuid-macro/: .conform.yaml  .gitignore  Cargo.toml  README.md
uuid-macro-hack/: Cargo.toml
uuid-macro-hack/src/: lib.rs
uuid-macro/src/: lib.rs
