[package]
name = "plating"
description = "PLATING - the UI for RUST. Uses native widgets and gives the user complete and full control over the ui."
version = "0.0.1"
edition = "2018"
authors = ["Marcel Lambert <marcel_lambert@ymail.com>"]
categories = ["gui"]
keywords = ["gui", "native"]
documentation = "https://docs.rs/plating/"
homepage = "https://plating-rust.github.io/"
repository = "https://github.com/plating-rust/plating"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "book/*",
    "examples/*",
    ".rusty-hooks/*",
    "commitmessage",
    "setup-git.sh",
    ".conform.yaml",
    ".clog.toml"
]

[workspace]
members = ["./uuid-macro", "./uuid-macro-hack"]

[badges]
maintenance = { status = "actively-developed" }


[features]
default = ["serde", "log"]

mock_os = []

[dependencies]
uuid = { version = "^0.8.1", features = ["v4"] }

bitflags = "^1.2"
anyhow = "^1.0"
thiserror = "^1.0"

plating-macros = { path = "./uuid-macro", version="0.0.1" }

log = { version = "0.4.11", optional = true }
serde = { version = "^1.0", features = ["derive", "rc"], optional = true }
noop_proc_macro = "0.3.0" #todo: disable when serde is activated

[dev-dependencies]
simple_logger = "1.6.0" #required to build & run examples

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.23.0"
core-graphics = "0.22.0"
objc = "^0.2"
libc = "0.2.73"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--example-rustdoc-arg" ]

[[example]]
name = "cocoa_hello_world"