[package]
name = "plating_workspace"
version = "0.0.1"
authors = ["Marcel Lambert <marcel_lambert@ymail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
documentation = "https://docs.rs/plating/"
homepage = "https://plating-rust.github.io/"
repository = "https://github.com/plating-rust/plating"

exclude = [
    "examples/*",
    ".cargo-husky/*",
    ".conform.yaml",
    ".editorconfig",
    "commitmessage",
    "rustfmt.toml",
    "rusty-hook.toml"
]

[workspace]
members = ["core",
           "systems",
           "systems/default_widgets",
           "systems_macros",
           "plating"]
default-members = ["plating"]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
# cargo-husky making sure we run all the checks before commiting/pushing
# copies our hooks from the .cargo-husky folder on first "cargo test" run
cargo-husky = { version = "^1", features = ["user-hooks"] }
