[package]
name = "plating"
version = "0.0.1"
edition = "2018"
authors = ["Marcel Lambert <marcel_lambert@ymail.com>"]
description = "PLATING - the UI for RUST. Uses native widgets and gives the user complete and full control over the ui."
categories = ["gui"]
keywords = ["gui", "native"]
documentation = "https://docs.rs/plating/"
homepage = "https://plating-rust.github.io/"
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["serde", "plating_systems", "win_ui3", "cocoa"]
serde = ["plating_core/serde", "cocoa/serde", "win_ui3/serde"]

[dependencies]
plating_core = { path = "../core", version="0.0.1" }
plating_systems = { path = "../systems", version="0.0.1", optional = true }
cocoa = { path = "../cocoa", package = "plating_cocoa", version="0.0.1", optional = true}
win_ui3 = { path = "../WinUI3", package = "plating_win_ui3", version="0.0.1", optional = true }


[package.metadata.docs.rs]
all-features = true
