[package]
name = "plating-uuid-macro-hack"
description = "Macros to use internally"
version = "0.0.1"
edition = "2018"
authors = ["Marcel Lambert <marcel.lambert@ymail.com>"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
uuid = { version = "^0.8.1", features = ["v4"] }
proc-macro-hack = "^0.5.16"
proc-quote = "^0.3.2"
syn = "1.0.34"
proc-macro2 = "1.0"

[lib]
proc-macro = true