[package]
name = "plating-macros"
description = "Macros to use internally by plating.  Do not use this crate directly but use 'plating'."
version = "0.0.1"
edition = "2018"
authors = ["Marcel Lambert <marcel.lambert@ymail.com>"]
license = "MIT OR Apache-2.0"
categories = ["gui", "rust-patterns"]
keywords = ["gui", "native", "macro"]
documentation = "https://docs.rs/plating/"
homepage = "https://plating-rust.github.io/"
repository = "https://github.com/plating-rust/plating"
readme = "../README.md"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

uuid = { version = "^0.8.1", features = ["v4"] }
proc-macro-hack = "0.5.16"
plating-uuid-macro-hack = { path = "../uuid-macro-hack", version="0.0.1" }
syn = "1.0.34"