[package]
name = "default_widgets"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
plating_systems_macros = {path = "../../systems_macros" }
plating_core = {path = "../../core" }
syn = { version = "1.0", features = ["full", "parsing"] }
quote = "1.0"

[dev-dependencies]
plating_systems = {path = "../" }